Fixed main tag cutting off prematurely

--- a/iris/static/css/base.css
+++ b/iris/static/css/base.css
@@ -6,13 +6,13 @@ body {
     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
 
-.mdl-layout__header {
-    margin-bottom: 32px; /*Creates a weird effect when you scroll*/
-}
-
 .mdl-layout__title:link, .mdl-layout__title:visited, .mdl-layout__title:hover, .mdl-layout__title:active{
     color: white;
     text-decoration: none;
+}
+
+main {
+    padding: 32px 0;
 }
 
 .mdl-cell .mdl-card {
